<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/email_label"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_icon_content_description"
        app:srcCompat="@drawable/ic_launcher_monochrome" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/email_input"
        android:text="@string/email"
        android:labelFor="@id/email_input" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/password_label"
        android:layout_marginBottom="16dp"
        android:inputType="textEmailAddress"
        android:autofillHints="{@value #AUTOFILL_HINT_EMAIL_ADDRESS}" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/password_input"
        android:text="@string/password"
        android:labelFor="@id/password_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword"
        android:autofillHints="{@value #AUTOFILL_HINT_PASSWORD}" />

    <Button
        android:id="@+id/sign_in_button"
        android:text="@string/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input"
        android:layout_alignParentEnd="true"
        style="@style/TextAppearance.App.Button" />

    <RelativeLayout
        android:id="@+id/register_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input"
        android:layout_toStartOf="@id/sign_in_button"
        android:layout_marginEnd="20dp" >

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/register_account_prompt"
            android:textSize="@dimen/register_text_size" />

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_toEndOf="@id/register_text"
            android:gravity="center_vertical"
            android:text="@string/register_account_link"
            android:textColor="@color/teal_dark"
            android:textSize="@dimen/register_text_size"
            android:clickable="true" />

    </RelativeLayout>

</RelativeLayout>
