<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="RegisterFragment" >

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/email_label"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_icon_content_description"
        app:srcCompat="@drawable/ic_launcher_monochrome" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_input"
        android:text="@string/email"
        android:labelFor="@id/email_input" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_label"
        android:layout_marginBottom="16dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_input"
        android:text="@string/password"
        android:labelFor="@id/password_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <TextView
        android:id="@+id/confirm_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:text="@string/confirm_password"
        android:labelFor="@id/confirm_password_input" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/confirm_password_label"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <Button
        android:id="@+id/register_button"
        android:text="@string/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password_input"
        android:layout_alignParentEnd="true"
        style="@style/TextAppearance.App.Button" />

</RelativeLayout>
