<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_inventory_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="InventoryItemFragment" >

    <TextView
        android:id="@+id/item_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/item_name_input"
        android:text="@string/item_name_label"
        android:textAllCaps="true"
        android:labelFor="@id/item_name_input" />

    <EditText
        android:id="@+id/item_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_above="@id/item_qty_label"
        android:inputType="text"
        android:autofillHints="{@value #AUTOFILL_HINT_NOT_APPLICABLE}" />

    <TextView
        android:id="@+id/item_qty_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/item_qty_label"
        android:textAllCaps="true"
        android:labelFor="@id/item_qty_input" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_qty_input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/item_qty_label"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/item_qty_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="{@value #AUTOFILL_HINT_NOT_APPLICABLE}"
            android:inputType="number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_qty_decrease"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/item_qty_decrease"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:contentDescription="@string/item_qty_decrease_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_qty_increase"
            app:layout_constraintStart_toEndOf="@+id/item_qty_input"
            app:srcCompat="@drawable/icon_remove" />

        <ImageView
            android:id="@+id/item_qty_increase"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:contentDescription="@string/item_qty_increase_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_qty_decrease"
            app:srcCompat="@drawable/icon_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_update_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_qty_input_group"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/item_remove"
            android:textColor="@color/remove_red"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_save"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>